# loom-dataflow

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  benchmark.sh  build.sh  kernel.cpp  loom_pipeline.py  lower.sh  orchestrator.py  pyproject.toml  replace.py  resolved_time_model.md  run_pipeline.sh  setup_ide.sh  split_kernel.py  staged_etg_dump.json
lib/: CMakeLists.txt  README.md
lib/adl-dialect/IR/: ADLDialect.cpp  ADLDialect.td  ADLOps.td  ADLTypes.td  CMakeLists.txt
lib/analysis/: CMakeLists.txt
lib/analysis/inc/: hw_dim_splitter.h  mapping_prioritizer.h  static_memory_analyser.h
lib/analysis/src/: hw_dim_splitter.cpp  mapping_prioritizer.cpp  static_memory_analyser.cpp
lib/dataflow-dialect/: CMakeLists.txt  README.md
lib/dataflow-dialect/IR/: CMakeLists.txt  DataflowDialect.cpp  DataflowDialect.td  DataflowHwDeclOps.td  DataflowOps.td  DataflowTypes.td
lib/lcs/: CMakeLists.txt
lib/lcs/inc/: analysis_engine.h  constraint_exporter.h  constraint_set.h  constraint_space_utils.h
lib/lcs/src/: analysis_engine.cpp  constraint_exporter.cpp  constraint_set.cpp  constraint_space_utils.cpp
lib/lcs/viz_engine/: README.md  __init__.py  cli.py  parser.py  projector.py  renderer.py  sampler.py
lib/loom-dialect/: CMakeLists.txt
lib/loom-dialect/IR/: CMakeLists.txt  LoomDialect.cpp  LoomDialect.td  LoomInterfaces.td  LoomOps.cpp  LoomOps.td  LoomTypes.td
lib/loom-dialect/Transforms/: BufferizableOpInterfaceImpl.h  CMakeLists.txt  bufferizable_op_interface_impl.cpp
lib/modules/: CMakeLists.txt  README.md  mesh2d.h
lib/modules/inc/: chain.h  torus.h
lib/modules/src/: network.cpp
lib/passes/: CMakeLists.txt  README.md
lib/passes/LCS/: CMakeLists.txt
lib/passes/TileLoomToTTKernel/: CMakeLists.txt  README.md
lib/passes/affine/: CMakeLists.txt  affine_explore_main.cpp  affine_parallel_to_for.cpp  affine_parallel_to_for.h  affine_tile.cpp  affine_tile.h
lib/passes/common/: CMakeLists.txt  README.alloc_copy_mapping.md  explore_alloc_copy_mapping.cpp  explore_alloc_copy_mapping.h  reinterpret_cast_reuse.cpp  reinterpret_cast_reuse.h  spatial_mapping.cpp
lib/passes/constraint-opt/: CMakeLists.txt
lib/passes/cost-model/: CMakeLists.txt
lib/passes/lcs/: CMakeLists.txt
lib/passes/loom-opt/: CMakeLists.txt
lib/passes/triton-shared/: CMakeLists.txt  const_dedup_cleanup.cpp  explore_alloc_copy_mapping.cpp  explore_alloc_copy_mapping.h  input_sharing_analysis.cpp  reinterpret_cast_reuse.cpp  reinterpret_cast_reuse.h  spatial_mapping.cpp  spatial_mapping.h  tile_scf_for_to_l1.cpp  tile_scf_for_to_l1.h  triton_shared_affinize.cpp  triton_shared_affinize.h  triton_shared_grid_to_parallel.cpp  triton_shared_grid_to_parallel.h  triton_shared_spatial_mapping_pass.cpp
lib/passes/tt-opt/: CMakeLists.txt
lib/pipeline/: CMakeLists.txt  __init__.py  loom_exploration_pipeline.h  loom_materialization_pipeline.h  loom_pipeline_api.cpp  loom_pipeline_api.h  loom_pybind.cpp  loom_version.h.in
lib/pipeline/inc/: loom_exploration_pipeline.h  loom_materialization_pipeline.h
lib/pipeline/src/: loom_exploration_pipeline.cpp  loom_materialization_pipeline.cpp  loom_pybind.cpp
lib/resources/: CMakeLists.txt  README.md
lib/resources/inc/: chain.h  memory.h
lib/resources/src/: chain.cpp  memory.cpp  ring.cpp
lib/scaleout/: CMakeLists.txt  README.md  scaleout.cpp
lib/scaleout/analyses/: CMakeLists.txt  README.md  affine_analyze_main.cpp  affine_explore_main.cpp  affine_tile.cpp  affine_tile.h  affine_tile_main.cpp  affine_tile_pass.cpp  input_sharing_analysis.cpp
lib/scaleout/dataflow-dialect/: CMakeLists.txt  DataflowDialect.cpp  DataflowDialect.td  DataflowOps.cpp  DataflowOps.td  README.md
lib/scaleout/examples/: os_mm.mlir
lib/scaleout/mlir/: CMakeLists.txt
lib/scaleout/modules/: network.cpp
lib/scaleout/passes/: CMakeLists.txt  README.md  affine_analyze_main.cpp  affine_explore_main.cpp  affine_parallel_to_for.cpp  affine_parallel_to_for.h  affine_tile.cpp  affine_tile.h  affine_tile_pass.cpp  input_sharing_analysis.cpp  spatial_mapping.cpp  spatial_mapping.h  triton_shared_affinize.cpp  triton_shared_affinize.h  triton_shared_explore_main.cpp  triton_shared_grid_to_parallel.cpp  triton_shared_grid_to_parallel.h  triton_shared_grid_to_parallel_main.cpp  triton_shared_reuse_analysis.cpp  triton_shared_reuse_analysis.h  triton_shared_reuse_main.cpp
lib/scaleout/resources/: ring.cpp
lib/scaleout/tool/: triton_shared_to_affine.cpp
lib/smt/: main.py  orchestrator.py
lib/smt/core/: expr_resolver.py  solver_context.py
lib/smt/models/: pipeline_agg.py
lib/smt/utils/: json_loader.py  reporter.py  utils.py
src/scaleout/: CMakeLists.txt  scaleout.h
src/scaleout/mlir/: CMakeLists.txt  linalg_list_ops.cpp  linalg_tile_reduce_transform.cpp
src/scaleout/modules/: README.md  chain.h  mesh2d.h  module.h  network.h  torus.h
src/scaleout/resources/: README.md  chain.cpp  mem_capacity.cpp  mem_capacity.h  mem_port.cpp  mem_port.h  memory.cpp  resource_base.h  resource_manager.h  ring.h
src/scaleout/standalone/: README.md
tool/: CMakeLists.txt  README.md
tool/adl-dialect/: CMakeLists.txt  adl_parse.cpp
tool/affine/: CMakeLists.txt  affine_explore_main.cpp  affine_tile_main.cpp
tool/dataflow-dialect/: CMakeLists.txt  df_example_parse.cpp
tool/loom-constraint/single_stage/: CMakeLists.txt  compress_intermediate_var_main.cpp  constraint_canonicalize_main.cpp  constraint_decompose_main.cpp  constraint_factorize_main.cpp  constraint_linearize_main.cpp  constraint_simplify_main.cpp
tool/loom-lsp-server/: CMakeLists.txt  loom-lsp-server.cpp
tool/loom-opt/: CMakeLists.txt  loom-opt.cpp  ttshared-opt.cpp
tool/loom-opt/single_stage/: CMakeLists.txt  affinize_main.cpp  analyze_reuse_main.cpp  canonicalize_main.cpp  (+12 more)
tool/resource-system/: CMakeLists.txt  module_demo.cpp  resource_demo.cpp
tool/tileloom-to-ttkernel/: CMakeLists.txt  tileloom_to_ttkernel_opt.cpp
tool/triton-shared/: triton_shared_affinize_main.cpp  triton_shared_annotate_reuse.cpp  triton_shared_explore_main.cpp  triton_shared_to_affine.cpp  ttshared-opt.cpp
(+555 files in other folders)
